      - debian/patches/glibc232-ia64-unwindinfo.dpatch: Modify Makeconfig
        which unconditionally set the libunwind macro to -lunwind, until the
        it's safe again to regenerate the configure script, on advice of
        Jeff Bailey.  (Closes: #284563)
      - debian/control.in/main: Tighten build dependency on ia64 to
        gcc-3.3_3.3.5-4.
      - debian/control: Likewise.

    - debian/local/manpages/locale.1: Add the description about
      /usr/share/i18n/SUPPORTED.  Requested by Guillermo S. Romero
      <gsromero@alumnos.euitt.upm.es>.  (Closes: #284137)

 -- GOTO Masanori <gotom@debian.org>  Wed, 15 Dec 2004 19:44:47 +0900

glibc (2.3.2.ds1-19) unstable; urgency=high

  * GOTO Masanori <gotom@debian.org>

    - debian/local/manpages/gencat.1: Use \fR instead of \fT for bold
      font, and use .TP instead of .PP for option usage.  Patched by
      Lars Wirzenius <lars.wirzenius@nokia.com>.  (Closes: #279685)
    - debian/local/manpages/iconvconfig.8: Likewise + fix typo.
    - debian/local/manpages/mtrace.1: Likewise.
    - debian/local/manpages/locale.1: Add "SEE ALSO" to the end of the
      manual.  (Closes: #282128)

    - debian/sysdeps/linux.mk: Drop -fomit-frame-pointer from compiling
      option to build NPTL packages in order to get valid backtrace. 
      -D__USE_STRING_INLINES is also dropped to consider about backtraces.
      Requested by David Mosberger <davidm@hpl.hp.com>.
    - debian/sysdeps/amd64.mk: Likewise.
    - debian/sysdeps/i386.mk: Likewise.
    - debian/sysdeps/s390.mk: Likewise.
    - debian/sysdeps/sparc.mk: Likewise.

    - debian/patches/glibc232-hppa-unwindinfo.dpatch: Add for unwind
      information for hppa plt fixup routine.  Patched by
      Randolph Chung <tausq@debian.org>.  (Closes: #281993)
    - debian/patches/glibc232-ia64-unwindinfo.dpatch: Add to work
      ia64 unwind info and libunwind properly.  Requested by David Mosberger
      <davidm@napali.hpl.hp.com>.  (Closes: #278837)
