@@ -15,6 +15,12 @@ glibc (2.3.2.ds1-20) unstable; urgency=high
         gcc-3.3_3.3.5-4.
       - debian/control: Likewise.
 
+    - debian/sysdeps/amd64.mk: Add /lib64 and /usr/lib64 symlinks which are
+      provided by glibc instead of base-files for amd64.  Requested by Goswin
+      Brederlow <brederlo@informatik.uni-tuebingen.de>.  (Closes: #259302)
+    - debian/rules.d/debhelper.mk: Replace from extra_pkg_install to
+      extra_debhelper_pkg_install rule which are used for debhelper.mk only.
+
     - debian/local/manpages/locale.1: Add the description about
       /usr/share/i18n/SUPPORTED.  Requested by Guillermo S. Romero
       <gsromero@alumnos.euitt.upm.es>.  (Closes: #284137)
